# music-station

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  run.bat  run_app.bat  run_server.bat  test_sf.py  test_torchaudio.py
src/: server.py
src/heartlib/pipelines/: music_generation.py
web/: package-lock.json  package.json
web/public/editor/: index.html
web/src/: App.jsx  index.css
web/src/components/: AdvancedDrawer.jsx  AudioPromptInput.jsx  EditorTab.jsx  HistorySidebar.jsx  LyricsInput.jsx  MusicPlayer.jsx  QueuePanel.jsx
web/src/store/: useAppStore.js
