[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heartlib"
version = "0.1.0"
description = "A Python Library."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "CC-BY-NC-4.0"}
authors = [
    {name = "HeartMuLa Team", email = "heartmula.ai@gmail.com"}
]
dependencies = [
    "numpy",
    "torch",
    "torchaudio",
    "torchtune",
    "torchao",
    "torchvision",
    "tqdm",
    "traitlets",
    "traittypes",
    "transformers",
    "tokenizers",
    "ipykernel",
    "einops",
    "accelerate",
    "bitsandbytes",
    "vector-quantize-pytorch",
    "modelscope",
    "soundfile",
    "huggingface_hub"
]
urls = { "homepage" = "https://heartmula.github.io/" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

